content/cli/v7/commands/npm-edit.mdx
---
title: npm-edit
section: 1
description: Edit an installed package
github_repo: npm/cli
github_branch: release/v7
github_path: docs/content/commands/npm-edit.md
redirect_from:
  - /cli-documentation/v7/cli-commands/edit
  - /cli-documentation/v7/cli-commands/npm-edit
  - /cli-documentation/v7/commands/edit
  - /cli-documentation/v7/commands/npm-edit
  - /cli-documentation/v7/edit
  - /cli-documentation/v7/npm-edit
  - /cli/v7/cli-commands/edit
  - /cli/v7/cli-commands/npm-edit
  - /cli/v7/commands/edit
  - /cli/v7/edit
  - /cli/v7/npm-edit
---

### Synopsis

```bash
npm edit <pkg>
```

Note: This command is unaware of workspaces.

### Description

Selects a dependency in the current project and opens the package folder in the default editor (or whatever you've configured as the npm `editor` config -- see [`npm-config`](commands/npm-config).)

After it has been edited, the package is rebuilt so as to pick up any changes in compiled packages.

For instance, you can do `npm install connect` to install connect into your package, and then `npm edit connect` to make a few changes to your locally installed copy.

### Configuration

#### `editor`

- Default: The EDITOR or VISUAL environment variables, or 'notepad.exe' on Windows, or 'vim' on Unix systems
- Type: String

The command to run for `npm edit` and `npm config edit`.

### See Also

- [npm folders](/cli/v7/configuring-npm/folders)
- [npm explore](/cli/v7/commands/npm-explore)
- [npm install](/cli/v7/commands/npm-install)
- [npm config](/cli/v7/commands/npm-config)
- [npmrc](/cli/v7/configuring-npm/npmrc)
